# dash-synthetic

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  daily.yml  release.yml
dashsynthetic/: __init__.py  engine.py  generator.py  multi_engine.py  profiler.py  relationships.py  stats.py  ui.py
docs/api/: dashsynthetic.html  index.html  search.js
marketplace/: listing.json  quickstart_notebook.py
tests/: test_dashsynthetic.py  test_multi_engine.py  test_relationships.py  test_structured_requirements.py
