[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-synthetic"
version = "0.1.0"
description = "Synthetic data generation for Databricks — with a built-in notebook UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Darshan Shah", email = "darshan.innovation@icloud.com" }]
keywords = ["databricks", "synthetic-data", "pyspark", "delta"]
dependencies = ["ipywidgets>=8.0", "numpy>=1.24", "dash-ui>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hatch", "pdoc", "ruff"]

[project.urls]
Homepage = "https://github.com/darshan-innovation/dash-synthetic"

[tool.hatch.build.targets.wheel]
packages = ["dashsynthetic"]
